--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,21 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    I001,
+    I003,
+    I004,
+    I005
 exclude =
-    .venv
     tests/,
     */migrations/,
     data/
     venv/,
+    */venv/,
     env/,
+    */env/,
     docs/,
     frontend/,
     infra/
 per-file-ignores =
     */settings.py:E501
+max-complexity = 10
