--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,11 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
+  location /s/ {
+    client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/s/;
+  }
 
 
   location /media/ {
