--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,11 +67,13 @@ jobs:
     - name: Set up nodeJS
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Install dependencies
       run: |
         cd frontend/
+        npm install
+        npm install react@16.14.0 react-dom@16.14.0
         npm ci
 
     - name: Test frontend
