--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,59 +1,9 @@
-asgiref==3.8.1
-attrs==24.2.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==43.0.3
-defusedxml==0.8.0rc2
 Django==5.1.3
 django-cleanup==9.0.0
-django-debug-toolbar==4.4.6
-django-extensions==3.2.3
 django-filter==23.1
-django-pdb==0.6.2
-django-templated-mail==1.1.1
 djangorestframework==3.15.2
-djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
-flake8==7.1.1
-flake8-isort==6.1.1
-idna==3.10
-iniconfig==2.0.0
-isort==5.13.2
-itypes==1.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-mccabe==0.7.0
-oauthlib==3.2.2
-packaging==24.2
-Pillow==9.3.0
-pluggy==0.13.1
 psycopg2-binary==2.9.3
-py==1.11.0
-pycodestyle==2.12.1
-pycparser==2.22
-pydot==3.0.2
-pyflakes==3.2.0
-PyJWT==2.9.0
-pyparsing==3.2.0
-pytest==6.2.4
-pytest-django==4.4.0
-pytest-pythonpath==0.7.3
-python3-openid==3.2.0
-pytz==2024.2
-PyYAML==6.0
-requests==2.32.3
-requests-oauthlib==2.0.0
-six==1.16.0
-social-auth-app-django==4.0.0
-social-auth-core==4.5.4
-sqlparse==0.5.1
-style==1.1.0
-toml==0.10.2
-typing_extensions==4.12.2
-update==0.0.1
-uritemplate==4.1.1
-urllib3==2.2.3
-webcolors==1.11.1
+webcolors==24.11.1
+PyYAML==6.0.2
+pillow==11.0.0
