--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,25 @@
 server {
   listen 80;
   server_tokens off;
+  client_max_body_size 20M;
+
+  location /api/docs/ {
+    root /usr/share/nginx/html;
+    try_files $uri $uri/redoc.html;
+  }
 
   location /api/ {
-    client_max_body_size 20M;
+    # client_max_body_size 20M;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/api/;
   }
   location /admin/ {
-    client_max_body_size 20M;
+    # client_max_body_size 20M;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
   location /s/ {
-    client_max_body_size 20M;
+    # client_max_body_size 20M;
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/s/;
   }
