--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,5 +5,5 @@ COPY package*.json ./
 RUN npm install
 COPY . ./
 RUN npm run build
-RUN mkdir -p /static/docs && cp -r build result_build && cp -r docs /static/
-CMD cp -r /app/build/. /static/
+COPY ./docs ./build/docs
+CMD cp -r build result_build
