--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,9 @@ server {
   client_max_body_size 20M;
 
   location /api/docs/ {
-    root /static/docs;
-    try_files $uri $uri/redoc.html;
+    alias /static/docs/;
+    index redoc.html;
+    try_files $uri /redoc.html;
   }
 
   location /api/ {
