--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
   location /api/docs/ {
     alias /static/docs/;
     index redoc.html;
-    try_files $uri /redoc.html;
+    try_files $uri $uri/ /redoc.html;
   }
 
   location /api/ {
